namespace PowerPlantMapAPI.Data.Dto;

public class FeatureGeometryDto
{
    public string? Type { get; set; }
    public List<float>? Coordinates { get; set; }
}
