namespace PowerPlantMapAPI.Data.Dto;

public class GeneratorPowerDto
{
    public DateTime TimePoint { get; set; }
    public int Power { get; set; }
}
